# NevUP

./: .env.example  .gitignore  DECISIONS.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  eval.py  eval_report.html  eval_report.json  profiler.py  pyproject.toml  render.yaml  test_parse.py  test_parse2.py  test_parse_fix.py  vercel.json
alembic/: env.py
alembic/versions/: 001_initial_memory.py
app/: __init__.py  config.py  deps.py  main.py
app/audit/: router.py
app/auth/: jwt_utils.py  middleware.py  router.py
app/db/: session.py
app/events/: router.py
app/health/: router.py
app/memory/: models.py  router.py  schemas.py  service.py
nevup_ai_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
report/: index.html
tests/: conftest.py  test_auth.py  test_events.py  test_memory.py
